# howtheyvote

./: .editorconfig  .env.template  .flake8  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/: dependabot.yml
ansible/: dump.yml  hosts  (+3 more)
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  poetry.toml  pyproject.toml
backend/howtheyvote/: __init__.py  cdp.py  config.py  data.py  db.py  feed.py  files.py  helpers.py  json.py  links.py  meili.py  metrics.py  pushover.py  query.py  search.py  sentry.py  sharepics.py  vote_stats.py  waf.py  wsgi.py
backend/howtheyvote/alembic/: alembic.ini  env.py
backend/howtheyvote/alembic/versions/: 064daf473f9a_add_procedure_stage_column_to_votes_.py  0d47f2a76c65_add_position_counts_column_to_oeil_.py  184528e5ba14_add_idempotency_key_to_pipeline_runs_.py  1deea9ed7c52_add_oeil_subjects_column_to_votes_table.py  1f516b18c4f6_rename_result_column_to_status.py  2f958a6f147d_add_checksum_column_to_pipeline_runs_.py  2fb74cc3d20c_add_text_and_position_counts_column_to_press_releases_table.py  3895af031aea_add_responsible_committee_column_to_.py  3eec8050f4d5_add_eurovoc_concepts_column.py  47cf729ded96_add_dlv_title_and_result_columns_to_.py  52476392fc07_add_odp_procedure_reference_column_to_.py  5cb1a0fda851_add_amendment_info_columns_to_votes_.py  61bc3894e172_add_texts_adopted_reference_column_to_.py  6ad570082ec0_add_date_procedure_reference_to_oeil_.py  7c9e86276c6d_remove_is_featured_column_from_votes_.py  81451d6f5456_add_amendment_url_column_to_votes_table.py  848ef24718dd_add_press_release_column_to_votes_table.py  8d1995cb0bed_make_responsible_committee_column_json_.py  9200b9028b93_create_timestamp_index_on_votes_table.py  93de5ba071f5_add_oeil_summary_id_to_votes.py  9a4972f3a768_init.py  9b35d19b64c4_add_term_column_to_votes_table.py  9e72d2f87fd9_create_summaries_table.py  af1689d1ec9f_add_keywords_column_to_votes_table.py  b8621d92d68c_rename_press_release_column.py  bb4067c7fee7_add_topics_column_to_votes_table.py  ceeca4226a3e_remove_vote_groups_table.py  dab8b6d2b2fa_drop_issues_column.py
backend/howtheyvote/analysis/: __init__.py  helpers.py  oeil_summaries.py  press_releases.py  votes.py
backend/howtheyvote/api/: __init__.py  members_api.py  openapi_helpers.py  openapi_spec.py  query.py  serializers.py  sessions_api.py  static_api.py  stats_api.py  util.py  votes_api.py
backend/howtheyvote/cli/: __init__.py  aggregate.py  dev.py  flush.py  pipeline.py  search.py  system.py  temp.py
backend/howtheyvote/data/: committees.json  countries.json  eurovoc.json  groups.json  national_parties.json  oeil_subjects.json  topics.json
backend/howtheyvote/export/: __init__.py  csvw_helpers.py
backend/howtheyvote/models/: __init__.py  committee.py  common.py  country.py  eurovoc.py  group.py  member.py  national_parties.py  oeil.py  oeil_subject.py  oeil_summary.py  press_release.py  session.py  topic.py  types.py  vote.py
backend/howtheyvote/pipelines/: __init__.py  common.py  members.py  oeil_summaries.py  press.py  rcv_list.py  rcv_list_en.py  sessions.py  summaries.py  vot_list.py
backend/howtheyvote/scrapers/: __init__.py  common.py  helpers.py  members.py  national_parties.py  oeil_summaries.py  press_releases.py  sessions.py  votes.py
backend/howtheyvote/sharepics/: __init__.py  cdp.py
backend/howtheyvote/store/: __init__.py  aggregator.py  helpers.py  index.py  mappings.py  writer.py
backend/howtheyvote/templates/: atom.xml
backend/howtheyvote/worker/: __init__.py  worker.py
backend/stubs/xapian/: __init__.pyi
backend/tests/: conftest.py  helpers.py  test_data.py  test_helpers.py  test_links.py  test_pushover.py  test_query.py  test_search.py  test_vote_stats.py
backend/tests/analysis/: test_helpers.py  test_oeil_summaries.py  test_press_releases.py  test_votes.py
backend/tests/api/: test_members_api.py  test_openapi_helpers.py  test_query.py  test_sessions_api.py  test_votes_api.py
backend/tests/export/: test_csvw_helpers.py  test_init.py
backend/tests/models/: test_country.py  test_eurovoc.py  test_group.py  test_member.py  test_types.py  test_vote.py
backend/tests/pipelines/: test_rcv_list.py
backend/tests/pipelines/data/: document_a-9-2024-0163-en.html  odp-document_a-9-2024-0163.json  odp-procedure_2024-2006.json  oeil_2024-2006-reg.html  rcv-list_pv-9-2024-04-24-rcv-fr-evening.xml  rcv-list_pv-9-2024-04-24-rcv-fr-noon.xml
backend/tests/scrapers/: helpers.py  test_common.py  test_helpers.py  test_members.py  test_oeil_summaries.py  test_press_releases.py  test_sessions.py  test_votes.py
backend/tests/scrapers/data/members/: member_groups_adinolfi_term_8.html  member_groups_weber_term_10.html  member_info_aaltola_home.html  member_info_adinolfi_home.html  member_info_sonneborn_home.html  members_directory_term_9.xml
backend/tests/scrapers/data/oeil_summaries/: oeil-document-summary_1864147.html  oeil-procedure-file_2020-2042-ini.html  oeil-procedure-file_2021-2540-rsp.html
backend/tests/store/: test_aggregator.py  test_mappings.py  test_writer.py
backend/tests/worker/: test_init.py  test_worker.py
scrapers/: .coveragerc  .editorconfig  .env.example  .flake8  Dockerfile  Makefile  api.py  cli.py  mypy.ini  pyproject.toml
scrapers/ep_votes/: api.py  cli.py  helpers.py  models.py  scrapers.py
scrapers/tests/: test_api.py  test_helpers.py  test_models.py  test_scrapers.py
scrapers/tests/data/: adinolfi_term_9.html  b-9-2020-0220-en.html  calendar-term9.json  ficheprocedure_a9-0115-2021.html  ficheprocedure_a9-0141-2019.html  ficheprocedure_b9-0116-2021.html  member_info_adinolfi_home.html  member_info_weber_home.html  members_directory_term_8.xml  observatory_sessions_calendar-2021-11.json  p8_pv(2019)03-26(vot)_en.xml  procedure-b9-0154-2019.xml  sonneborn_home.html  summary-1651118.html  summary_id_ficheprocedure_a9-0149-2021.html  vote_collections_pv-9-2021-09-03-vot-en.xml  voting_lists_pv-9-2019-10-22-rcv-fr.xml  voting_lists_pv-9-2020-07-23-rcv-fr.xml
(+671 files in other folders)
