[tool.poetry]
name = "ep_votes"
version = "0.1.0"
description = ""
authors = ["Till Prochaska <mail@tillprochaska.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
