[project]
name = "howtheyvote"
description = ""
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "unidecode>=1.3.8",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "alembic>=1.14.1",
    "click>=8.1.8",
    "structlog>=25.1.0",
    "flask>=3.1.0",
    "cachetools>=5.5.1",
    "pillow>=11.1.0",
    "gunicorn>=23.0.0",
    "apispec>=6.8.1",
    "apispec-webframeworks>=1.2.0",
    "prometheus-client>=0.21.1",
    "sqlalchemy>=2.0.37",
    "schedule>=1.2.2",
    "pytz>=2025.1",
    "websocket-client>=1.8.0",
    "tabulate>=0.9.0",
]

[tool.poetry]
packages = [
    { include = "./howtheyvote" }
]

[project.scripts]
htv = "howtheyvote.cli:cli"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.16.0"
ruff = "^0.11.12"
types-pillow = "^10.2.0.20240822"
types-requests = "^2.32.0.20250515"
types-beautifulsoup4 = "^4.12.0.20250516"
types-cachetools = "^6.0.0.20250525"
setuptools = "^80.9.0"
pytest-env = "^1.1.5"
responses = "^0.25.7"
time-machine = "^2.16.0"
types-tabulate = "^0.9.0.20241207"

[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "UP006"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"__init__.py" = ["F401"]

[tool.mypy]
exclude = ["alembic", ".venv"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.pytest.ini_options]
env = [
    "D:HTV_BACKEND_DATABASE_URI=sqlite:////howtheyvote/database/database.test.sqlite3",
    "HTV_BACKEND_PUBLIC_URL=https://example.org/api",
    "HTV_SEARCH_INDEX_PREFIX=test",
]
markers = [
    "always_mock_requests: Always mock HTTP requests, even when request mocks are disabled globally"
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "."
]