[project]
name = "howtheyvote"
description = ""
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "unidecode>=1.3.8",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "alembic>=1.18.5",
    "click>=8.4.2",
    "structlog>=26.1.0",
    "flask>=3.1.0",
    "cachetools>=7.1.4",
    "pillow>=12.3.0",
    "gunicorn>=26.0.0",
    "apispec>=6.10.0",
    "apispec-webframeworks>=1.2.0",
    "sqlalchemy>=2.0.51",
    "schedule>=1.2.2",
    "pytz>=2026.2",
    "websocket-client>=1.8.0",
    "tabulate>=0.10.0",
    "werkzeug (>=3.1.8,<4.0.0)",
    "sentry-sdk[flask,sqlalchemy] (>=2.64.0,<3.0.0)",
]

[tool.poetry]
packages = [
    { include = "./howtheyvote" }
]

[project.scripts]
htv = "howtheyvote.cli:cli"

[tool.poetry.group.dev.dependencies]
coverage = "^7.14"
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
mypy = "^2.1.0"
ruff = "^0.15.20"
types-pillow = "^10.2.0.20240822"
types-requests = "^2.33.0.20260518"
types-beautifulsoup4 = "^4.12.0.20250516"
types-cachetools = "^7.0.0.20260518"
setuptools = "^82.0.1"
pytest-env = "^1.6.0"
responses = "^0.26.1"
time-machine = "^3.2.0"
types-tabulate = "^0.10.0.20260508"
pytest-mock = "^3.15.1"
types-pytz = "^2026.2.0.20260518"
typing-extensions = "^4.16.0"

[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "UP006", "T100", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"__init__.py" = ["F401"]

[tool.mypy]
exclude = ["alembic", ".venv"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.pytest.ini_options]
env = [
    "D:HTV_BACKEND_DATABASE_URI=sqlite:////howtheyvote/database/database.test.sqlite3",
    "HTV_BACKEND_PUBLIC_URL=https://example.org/api",
    "HTV_SEARCH_INDEX_PREFIX=test",
    "HTV_ENV=test",
    "HTV_BACKEND_REQUEST_TIMEOUT=0.5",
    "HTV_BACKEND_REQUEST_SLEEP=0",
    # Disable pushover notifications in test env even when an API token and user key
    # is configured in development environment
    "PUSHOVER_API_TOKEN=",
    "PUSHOVER_USER_KEY=",
]
markers = [
    "always_mock_requests: Always mock HTTP requests, even when request mocks are disabled globally"
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "."
]