[tool.poetry]
name = "ep_votes"
version = "0.1.0"
description = ""
authors = ["Till Prochaska <mail@tillprochaska.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
unidecode = "^1.3.4"
flake8-black = "^0.2.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
werkzeug = "^2.2.1"
sentry-sdk = {extras = ["flask"], version = "^1.9.1"}
python-dotenv = "^0.20.0"
coverage = "^6.4"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
black = "^21.10b0"
requests-mock = "^1.9.3"
mypy = "^0.971"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
