[tool.poetry]
name = "ep_votes"
version = "0.1.0"
description = ""
authors = ["Till Prochaska <mail@tillprochaska.de>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
unidecode = "^1.3.6"
flake8-black = "^0.3.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
werkzeug = "^2.3.4"
sentry-sdk = {extras = ["flask"], version = "^1.19.1"}
python-dotenv = "^0.21.0"
coverage = "^7.2"
pytest-cov = "^4.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
requests-mock = "^1.10.0"
mypy = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
